# graph-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.org  gtoolConfig.cmake.in
cmake/: gtoolConfig.cmake.in
doc/: quick-start.org
include/: builder.h  graph.h  graph.tpp  stream_builder.h  stream_graph.h
include/gtool/: atomics.h  builder.h  graph.h  stream_builder.h  stream_graph.h
src/: CMakeLists.txt  demo1.cpp  demo2.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp  test_static.cpp  test_stream.cpp
